--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 node_modules/
-/test-results/
-/playwright-report/
-/playwright/.cache/
-/coverage/
+test-results/
+playwright-report/
 .env
-.env.local
-*.log
 .DS_Store
-dist/
-build/
-screenshots/
-videos/
+*.log
